// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList With anchors renders correctly 1`] = `
<div>
  <ol
    class="css-vcugan-boxStyles-TaskListContainer"
  >
    <li
      class="css-16jufl0-TaskListItem"
    >
      <a
        class="css-n0v8bk-TextLink-boxStyles-TaskListItem"
        href="#"
      >
        <svg
          aria-hidden="true"
          class="css-kcmlov-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Completed
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Check eligibility
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </a>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <a
        class="css-n0v8bk-TextLink-boxStyles-TaskListItem"
        href="#"
      >
        <svg
          aria-hidden="true"
          class="css-kcmlov-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Completed
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Lorem ipsum dolor sit amet
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </a>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <a
        class="css-nafnpt-TextLink-boxStyles-TaskListItem"
        href="#"
      >
        <svg
          aria-hidden="true"
          class="css-h1n08a-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM6.85714 13.7143C7.61456 13.7143 8.22857 13.1003 8.22857 12.3429C8.22857 11.5854 7.61456 10.9714 6.85714 10.9714C6.09972 10.9714 5.48571 11.5854 5.48571 12.3429C5.48571 13.1003 6.09972 13.7143 6.85714 13.7143ZM13.7143 12.3429C13.7143 13.1003 13.1003 13.7143 12.3429 13.7143C11.5854 13.7143 10.9714 13.1003 10.9714 12.3429C10.9714 11.5854 11.5854 10.9714 12.3429 10.9714C13.1003 10.9714 13.7143 11.5854 13.7143 12.3429ZM17.8286 13.7143C18.586 13.7143 19.2 13.1003 19.2 12.3429C19.2 11.5854 18.586 10.9714 17.8286 10.9714C17.0712 10.9714 16.4571 11.5854 16.4571 12.3429C16.4571 13.1003 17.0712 13.7143 17.8286 13.7143Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            In progress
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Case Studies
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </a>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <a
        class="css-n0v8bk-TextLink-boxStyles-TaskListItem"
        href="#"
      >
        <svg
          aria-hidden="true"
          class="css-h1n08a-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10.5"
            stroke-dasharray="4 4"
            stroke-linecap="round"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Not started
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Review and submit
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          >
            Not available until previous tasks are done
          </span>
        </span>
      </a>
    </li>
  </ol>
</div>
`;

exports[`TaskList With buttons renders correctly 1`] = `
<div>
  <ol
    class="css-vcugan-boxStyles-TaskListContainer"
  >
    <li
      class="css-16jufl0-TaskListItem"
    >
      <button
        class="css-1rrnib1-BaseButton-boxStyles-TaskListItem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="css-kcmlov-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Completed
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Check eligibility
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </button>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <button
        class="css-1rrnib1-BaseButton-boxStyles-TaskListItem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="css-kcmlov-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Completed
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Lorem ipsum dolor sit amet
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </button>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <button
        class="css-1u344cx-BaseButton-boxStyles-TaskListItem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="css-h1n08a-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM6.85714 13.7143C7.61456 13.7143 8.22857 13.1003 8.22857 12.3429C8.22857 11.5854 7.61456 10.9714 6.85714 10.9714C6.09972 10.9714 5.48571 11.5854 5.48571 12.3429C5.48571 13.1003 6.09972 13.7143 6.85714 13.7143ZM13.7143 12.3429C13.7143 13.1003 13.1003 13.7143 12.3429 13.7143C11.5854 13.7143 10.9714 13.1003 10.9714 12.3429C10.9714 11.5854 11.5854 10.9714 12.3429 10.9714C13.1003 10.9714 13.7143 11.5854 13.7143 12.3429ZM17.8286 13.7143C18.586 13.7143 19.2 13.1003 19.2 12.3429C19.2 11.5854 18.586 10.9714 17.8286 10.9714C17.0712 10.9714 16.4571 11.5854 16.4571 12.3429C16.4571 13.1003 17.0712 13.7143 17.8286 13.7143Z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="none"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            In progress
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Case Studies
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          />
        </span>
      </button>
    </li>
    <li
      class="css-16jufl0-TaskListItem"
    >
      <button
        class="css-1rrnib1-BaseButton-boxStyles-TaskListItem"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="css-h1n08a-Icon-TaskListItem"
          clip-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10.5"
            stroke-dasharray="4 4"
            stroke-linecap="round"
          />
        </svg>
        <span
          class="css-1i7cdx8-boxStyles"
        >
          <span
            class="css-d605vf-boxStyles-Text"
          >
            Not started
          </span>
          <span
            class="css-1gjfalk-boxStyles-Text-TaskListItem"
          >
            Review and submit
          </span>
          <span
            class="css-1lp7dl8-boxStyles-Text"
          >
            Not available until previous tasks are done
          </span>
        </span>
      </button>
    </li>
  </ol>
</div>
`;
